feat: model query functional dependencies