@@ -5,20 +5,46 @@ import tools.refinery.store.query.atom.DNFAtom;
 
 import java.util.*;
 
-public class DNF implements SymbolLike {
+public final class DNF implements SymbolLike {
 	private final String name;
 
 	private final String uniqueName;
 
 	private final List<Variable> parameters;
 
+	private final List<FunctionalDependency<Variable>> functionalDependencies;
+
 	private final List<DNFAnd> clauses;
 
-	private DNF(String name, List<Variable> parameters, List<DNFAnd> clauses) {
+	private DNF(String name, List<Variable> parameters, List<FunctionalDependency<Variable>> functionalDependencies,
+				List<DNFAnd> clauses) {
+		validateFunctionalDependencies(parameters, functionalDependencies);
 		this.name = name;
 		this.uniqueName = DNFUtils.generateUniqueName(name);
 		this.parameters = parameters;
+		this.functionalDependencies = functionalDependencies;
 		this.clauses = clauses;
+	}
+
+	private static void validateFunctionalDependencies(
+			Collection<Variable> parameters, Collection<FunctionalDependency<Variable>> functionalDependencies) {
+		var parameterSet = new HashSet<>(parameters);
+		for (var functionalDependency : functionalDependencies) {
+			validateParameters(parameters, parameterSet, functionalDependency.forEach(), functionalDependency);
+			validateParameters(parameters, parameterSet, functionalDependency.unique(), functionalDependency);
+		}
+	}
+
+	private static void validateParameters(Collection<Variable> parameters, Set<Variable> parameterSet,
+										   Collection<Variable> toValidate,
+										   FunctionalDependency<Variable> functionalDependency) {
+		for (var variable : toValidate) {
+			if (!parameterSet.contains(variable)) {
+				throw new IllegalArgumentException(
+						"Variable %s of functional dependency %s does not appear in the parameter list %s"
+								.formatted(variable, functionalDependency, parameters));
+			}
+		}
 	}
 
 	@Override
@@ -32,6 +58,10 @@ public class DNF implements SymbolLike {
 
 	public List<Variable> getParameters() {
 		return parameters;
+	}
+
+	public List<FunctionalDependency<Variable>> getFunctionalDependencies() {
+		return functionalDependencies;
 	}
 
 	@Override
@@ -57,6 +87,8 @@ public class DNF implements SymbolLike {
 
 		private final List<Variable> parameters = new ArrayList<>();
 
+		private final List<FunctionalDependency<Variable>> functionalDependencies = new ArrayList<>();
+
 		private final List<List<DNFAtom>> clauses = new ArrayList<>();
 
 		private Builder(String name) {
@@ -64,7 +96,7 @@ public class DNF implements SymbolLike {
 		}
 
 		public Builder parameter(Variable variable) {
-			this.parameters.add(variable);
+			parameters.add(variable);
 			return this;
 		}
 
@@ -73,8 +105,22 @@ public class DNF implements SymbolLike {
 		}
 
 		public Builder parameters(Collection<Variable> variables) {
-			this.parameters.addAll(variables);
+			parameters.addAll(variables);
 			return this;
+		}
+
+		public Builder functionalDependencies(Collection<FunctionalDependency<Variable>> functionalDependencies) {
+			this.functionalDependencies.addAll(functionalDependencies);
+			return this;
+		}
+
+		public Builder functionalDependency(FunctionalDependency<Variable> functionalDependency) {
+			functionalDependencies.add(functionalDependency);
+			return this;
+		}
+
+		public Builder functionalDependency(Set<Variable> forEach, Set<Variable> unique) {
+			return functionalDependency(new FunctionalDependency<>(forEach, unique));
 		}
 
 		public Builder clause(DNFAtom... atoms) {
@@ -113,9 +159,12 @@ public class DNF implements SymbolLike {
 					constraint.collectAllVariables(variables);
 				}
 				parameters.forEach(variables::remove);
-				postProcessedClauses.add(new DNFAnd(variables, constraints));
+				postProcessedClauses.add(new DNFAnd(Collections.unmodifiableSet(variables),
+						Collections.unmodifiableList(constraints)));
 			}
-			return new DNF(name, List.copyOf(parameters), postProcessedClauses);
+			return new DNF(name, Collections.unmodifiableList(parameters),
+					Collections.unmodifiableList(functionalDependencies),
+					Collections.unmodifiableList(postProcessedClauses));
 		}
 	}
 }
